[project]
name = "vrc-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain",
    "litellm",
    "faster-whisper",
    "python-dotenv",
    "loguru",
    "langchain-litellm>=0.5.1",
    "langchain-core>=1.2.16",
    "requests>=2.32.5",
    "tiktoken",
    "transformers",
    "aiavatar",
    "resemblyzer",
    "setuptools>=82.0.0",
    "mcp>=1.26.0",
    "python-osc>=1.9.3",
    "SpoutGL",
    "pillow",
    "google-genai>=1.65.0",
    "sentencepiece>=0.2.1",
    "sentence-transformers>=5.2.3",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
aiavatar = { path = "./lib/aiavatarkit" }
torch = { index = "pytorch-cu121" }
